unpackaged/main/default/objects/Case_Entitlements__c/Case_Entitlements__c.object-meta.xml
<CustomObject>
    <label>Case Entitlement</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Case Entitlements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>