unpackaged/main/default/objects/Case_Entitlements__c/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Case Entitlements</relationshipLabel>
    <relationshipName>Case_Entitlements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>