unpackaged/main/default/objects/Case_Entitlements__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <formula>Contract_Line_Item__r.ServiceContractId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Contract</label>
    <type>Text</type>
</CustomField>